<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_yandex_pogoda"
        android:orderInCategory="200"
        android:title="@string/yandex_pogoda_for_city"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about_developer"
        android:orderInCategory="200"
        android:title="@string/about_developer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_feedback_form"
        android:orderInCategory="200"
        android:title="@string/feedback_form"
        app:showAsAction="never"/>
</menu>